--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2479,6 +2479,10 @@ a:hover {
   margin: 0px 0px 10px 0px;
   border-bottom: 2px solid #f9af18;
 }
+.card .item .header-row input {
+  padding: 0px 0px 10px 0px;
+  margin: 0px 0px 10px 0px;
+}
 .card .item .header-link {
   text-align: right;
   font-size: 12px;
