--- a/views/dashboard/integration.jade
+++ b/views/dashboard/integration.jade
@@ -230,7 +230,7 @@ title SearchNTalk - DashBoard
                                 .clearer
                             div.links-editing
                                 p.edit-schedules
-                                    | Editing accounts
+                                    em Note: Create a network only if you've a group of experts. Else joining SearchNTalk network will be simpler and more useful.
                                     input.btn.btn-default(value='Create', type='submit')
                         strong OR
                         .actions-pane
