--- a/views/footer.jade
+++ b/views/footer.jade
@@ -6,7 +6,7 @@ div.footer
                     li
                         a(href='#') About Us
                     li
-                        a(href='#') Privacy Policy
+                        a(href='/privacy-policy') Privacy Policy
                     li
         div.row.copyright
             div.hidden-xs.col-sm-9
