--- a/views/dashboard/cards/BasicInfoCard.jade
+++ b/views/dashboard/cards/BasicInfoCard.jade
@@ -6,7 +6,7 @@
                 if isEditable
                     a.btn.btn-primary#editUserProfileBtn(data-id=userProfile.id)
                         i.icon-pencil
-                    &nbsp;
+                    | &nbsp;
                     a.btn.btn-default#fetchBasic
                         si.si-small.si-linkedin
         .user-profile
