--- a/views/dashboard/forgotPassword.jade
+++ b/views/dashboard/forgotPassword.jade
@@ -1,29 +1,29 @@
-include header
-title SearchNTalk - Forgot Password
-.container-fluid
-    .row-fluid
-        .col-md-2
-        .col-md-8
-            .col-md-4
-                - if (code)
+title SearchNTalk | Forgot Password
+include ../header
+.matter
+    .container
+        .row
+            .content.col-md-12
+                .card
                     form#reset-password
-                        .form-group
-                            label.control-label(for='password') New Password
-                            input.form-control#password(type='password', placeholder='New password', name='password')
-                        .form-group
-                            label.control-label(for='confirm-password') Confirm New Password
-                            input.form-control#confirm_password(type='password', name='confirm_password', placeholder='Confirm password')
-                        .form-group
-                            input.btn.btn-primary(type='submit', value='Update Password')
-                - else
-                    form#request-new-password
-                        .form-group
-                            label.control-label(for='email') Email
-                            input.form-control#email(type='text', placeholder='Email', name='email')
-                        .form-group
-                            input.btn.btn-primary(type='submit', value='Reset password')
-        .col-md-2
+                        .item-edit
+                            - if (code)
+                                    h3 New Password
+                                    .form-group
+                                        input.form-control#password(type='password', placeholder='New password', name='password')
+                                    h3 Confirm New Password
+                                    .form-group
+                                        input.form-control#confirm_password(type='password', name='confirm_password', placeholder='Confirm password')
+                                    .links-editing
+                                        input.btn.btn-primary.btn-block(type='submit', value='Update Password')
+                            - else
+                                form#request-new-password
+                                    h3 Email
+                                    .form-group
+                                        input.form-control#email(type='text', placeholder='Email', name='email')
+                                    .links-editing
+                                        input.btn.btn-primary.btn-block(type='submit', value='Reset password')
 script.
     var code = '#{code}';
 script(src='/js/app/dashboard/forgotPassword.js')
-include footer
+include ../footer
