image  - create 3 sizes on upload use new images in dashboard

--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -136,7 +136,7 @@ div.modal.fade#scheduler
                             .hidden-xs.avatar
                                 .shadow
                                     a(href=DashboardUrls.userProfile(user.id))
-                                        img(src=ApiUrlDelegate.userProfilePicture(user.id), width='100%', height='100%')
+                                        img(src=ApiUrlDelegate.userProfilePicture(user.id)+ '?imageSize=200', width='100%', height='100%')
                             .info
                                 .info-upper
                                     a.user-displayname(href=DashboardUrls.userProfile(user.id))= formatName(user.first_name, user.last_name, user.title)
