--- a/views/payment/paymentComplete.jade
+++ b/views/payment/paymentComplete.jade
@@ -33,7 +33,7 @@ title ST- Payment Complete
                             .hidden-xs.avatar
                                 .shadow
                                     a(href=DashboardUrls.userProfile(user.id))
-                                        img(src=ApiUrlDelegate.userProfilePicture(user.id), width='100%', height='100%')
+                                        img(src=ApiUrlDelegate.userProfilePicture(user.id) + '?imageSize=200', width='100%', height='100%')
                             .info
                                 .user-displayname= formatName(user.first_name, user.last_name, user.title)
                                 if (user.date_of_birth)
